[gd_scene load_steps=5 format=3 uid="uid://d2bw4qxehx75c"]

[ext_resource type="Texture2D" uid="uid://dctel52eg6yco" path="res://GameResources/Meshes/Characters/textures/godot_plush_basecolor.png" id="1_5cwy5"]
[ext_resource type="Script" path="res://Scripts/UI/Create_match_menu/Create_Match_Menu.gd" id="1_e5xdp"]

[sub_resource type="LabelSettings" id="LabelSettings_w52wu"]
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_rw6vp"]
font_size = 24

[node name="PanelContainer" type="PanelContainer"]
anchors_preset = -1
anchor_left = 0.559
anchor_right = 0.97
anchor_bottom = 1.0
offset_left = 0.0319824
offset_right = -0.440063
grow_horizontal = 0
grow_vertical = 2
script = ExtResource("1_e5xdp")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "HOST A MATCH"
label_settings = SubResource("LabelSettings_w52wu")

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "ROOM NAME"
label_settings = SubResource("LabelSettings_rw6vp")

[node name="TextEdit" type="TextEdit" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1
placeholder_text = "ROOM NAME"

[node name="Label6" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "MAP"
label_settings = SubResource("LabelSettings_rw6vp")

[node name="MapSelectorContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="Button" type="Button" parent="VBoxContainer/MapSelectorContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/MapSelectorContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("1_5cwy5")
expand_mode = 3

[node name="Label" type="Label" parent="VBoxContainer/MapSelectorContainer/TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.502
anchor_top = 0.096
anchor_right = 0.502
anchor_bottom = 0.096
offset_left = -23.464
offset_top = -11.584
offset_right = 23.536
offset_bottom = 11.416
grow_horizontal = 2
text = "MAP NAME"
horizontal_alignment = 1

[node name="Button2" type="Button" parent="VBoxContainer/MapSelectorContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5

[node name="Label3" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "GAMEMODE"
label_settings = SubResource("LabelSettings_rw6vp")

[node name="OptionButton" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2
item_count = 2
selected = 0
popup/item_0/text = "TEAM DEATHMATCH"
popup/item_0/id = 0
popup/item_1/text = "FREE FOR ALL"
popup/item_1/id = 1

[node name="Label4" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "PRIVACITY"
label_settings = SubResource("LabelSettings_rw6vp")

[node name="OptionButton2" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2
item_count = 3
selected = 0
popup/item_0/text = "PUBLIC"
popup/item_0/id = 0
popup/item_1/text = "ONLY FRIENDS"
popup/item_1/id = 1
popup/item_2/text = "PRIVATE"
popup/item_2/id = 2

[node name="Label5" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "PLAYER CAPACITY"
label_settings = SubResource("LabelSettings_rw6vp")

[node name="OptionButton3" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2
item_count = 5
selected = 0
popup/item_0/text = "4"
popup/item_0/id = 0
popup/item_1/text = "6"
popup/item_1/id = 1
popup/item_2/text = "8"
popup/item_2/id = 2
popup/item_3/text = "10"
popup/item_3/id = 3
popup/item_4/text = "12"
popup/item_4/id = 4

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="CreateRoomButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "CREATE ROOM"

[connection signal="pressed" from="VBoxContainer/CreateRoomButton" to="." method="_on_create_room_button_pressed"]
